# report-bffe

./: .flake8  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  fdk-report-bff.yaml  mypy.ini  noxfile.py  pyproject.toml  setup.cfg  tasks.py
.github/workflows/: constraints.txt  coverage.yaml  deploy-demo.yaml  deploy-prod&demo.yaml  deploy-prod.yaml  deploy-staging.yaml
deploy/base/: deployment-fdk-reports-bff.yaml  kustomization.yaml  service-fdk-reports-bff.yaml
deploy/demo/: env.yaml  ingress.yaml
deploy/prod/: env.yaml  ingress.yaml
deploy/staging/: env.yaml  ingress.yaml
mapping/: data_service_time_series_properties.json  dataservices_properties.json  informationmodels_properties.json
mock/mappings/: api_metadata-cc9c75c9-d522-40c9-b748-73adbc9d1819.json  api_sparql_1659312000-139c0f3f-b3d0-4f0c-a0bd-45f84dad99e3.json  api_sparql_1659312000-8aa9509f-62ed-42ab-a908-432e32be726e.json  api_sparql_1659312000-ec6308a0-9243-410e-ba7f-db23814ef4db.json  api_sparql_1661990400-3c1d14a4-b530-4c30-aa29-d314450087d0.json  api_sparql_1661990400-692a06ec-a193-4c37-b97b-81bb9e8862f0.json  api_sparql_1661990400-a697e39f-3ad6-41e9-a193-3c0a793420b8.json  api_sparql_1664582400-44248ee8-8ed9-4226-86a9-6734351d82a0.json  api_sparql_1664582400-5ea38b15-c91c-452d-9ee4-1a5902b72a64.json  api_sparql_1664582400-6a8d8c20-d42c-4902-a7f2-622c79742462.json  apis-06aead9d-d4c7-409e-adbc-a3b69fe218e5.json  apis-303620ea-86bf-4cbb-b362-dc4edb4c2d51.json  concept-publishers-6d0b0c17-6fc6-47cc-8910-fdd1ff1eb8f3.json  concepts-07698625-20d3-4947-bd7a-3ecfd529b202.json  concepts-19d93d53-23e9-41d4-affe-a1c0a60a87af.json  concepts-20b90887-5437-4fff-a9d4-47961e4c8883.json  concepts-2a6513ae-fff7-4d92-bef6-212a4cce24c3.json  concepts-43ca1ce5-ce6b-4bbc-84f3-8b36c37e7d4b.json  concepts-54d807aa-f2b9-4f88-a9f1-1e28fee99e84.json  concepts-6c91c5f9-50a8-491b-85f0-1fdb1b67c0e7.json  concepts-9b069f16-5a69-4ad8-a552-602eca6fc574.json  concepts-9bff7cf8-65aa-425b-a662-1dd29755f913.json  dataservice-publishers-0a46bde9-8330-47f1-abb1-c3efbbe9893f.json  dataservices-1e0592ab-9b92-4c3d-a063-3fb9ab9a9fe2.json  dataservices-957c5ba5-1ff3-4f42-b604-34e34c3bd74a.json  dataset-publishers-27d6fba2-46b2-4eda-a69b-3be42edd96de.json  datasets-382cf5f5-d3c5-4990-879f-77097bc065fb.json  datasets-a3f473d5-f141-4dde-939c-f999b5b6355f.json  infomodel-publishers-1dcdad93-40b8-4276-9659-1bbebda57f50.json  infomodels-51a875fb-4682-485a-8054-aa1a5b180ed3.json  informationmodels-75874b33-79a7-40d0-a224-6248c6cd3567.json  (+69 more)
readme_resources/: mock_data.md
src/: __init__.py  aggregation.py  aggregation_utils.py  concept_aggregation.py  dataservice_aggregation.py  dataset_aggregation.py  endpoints.py  gunicorn_config.py  information_model_aggregation.py  organization_parser.py  rdf_namespaces.py  referenced_data_store.py  responses.py  service_requests.py  sparql_parsers.py  timeseries.py  utils.py
test/: conftest.py  docker-compose.contract.yml  test_aggregation.py  test_dataset_aggregation.py  test_elasticsearch_datasets.py  test_elasticserach_queries.py  test_es_utils.py  test_organization_parser.py  test_rdf_entry_mappers.py  test_referenced_data_store.py  test_responses.py  test_service_requests.py  test_sparql.py  test_sparql_filter.py  test_sparql_parsers.py  test_sparql_queries.py  test_sparql_query_builder.py  test_utils.py  unit_mock_data.py  utils.py
(+80 files in other folders)
