[tool.poetry]
name = "fdk-reports-bff"
version = "1.0.0"
description = ""
authors = ["NilsOveTen <nils.ove.tendenes@digdir.no>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.2.2"
flask-cors = "3.0.10"
flask-restful = "0.3.9"
python-dotenv = "0.21.0"
requests = "2.28.1"
gunicorn = "20.1.0"
asyncstdlib = "3.10.5"
httpx = "0.23.1"
elasticsearch = "7.16.3"
apscheduler = "3.9.1"
python-dateutil = "2.8.2"
python-json-logger = "2.0.4"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
pytest-mock = "3.10.0"
mock = "4.0.3"
isort = "5.10.1"
black = "^22.12.0"
flake8 = "^6.0.0"
pep8-naming = "^0.13.2"
safety = "^2.3.5"
flake8-import-order = "^0.18.2"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.1.20"
flake8-annotations = "^2.9.1"
mypy = "^0.991"
pytest-docker = "^1.0.1"
pytest-cov = "^4.0.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["fdk_reports_bff"]
omit = ["*gunicorn_config.py"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
