[tool.poetry]
name = "fdk-reports-bff"
version = "1.0.0"
description = ""
authors = ["NilsOveTen <nils.ove.tendenes@digdir.no>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.1"
flask-cors = "^4.0.0"
flask-restful = "^0.3.10"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
gunicorn = "^21.2.0"
asyncstdlib = "^3.12.0"
httpx = "^0.26.0"
elasticsearch = "^7.17.9"
apscheduler = "^3.10.4"
python-dateutil = "^2.8.2"
python-json-logger = "^2.0.7"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]
pytest = "7.4.4"
pytest-mock = "3.12.0"
mock = "5.1.0"
isort = "5.13.2"
black = "^23.12.1"
flake8 = "^7.0.0"
pep8-naming = "^0.13.3"
safety = "^3.0.1"
flake8-import-order = "^0.18.2"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.2.6"
flake8-annotations = "^3.0.1"
mypy = "^1.8.0"
pytest-docker = "^2.0.1"
pytest-cov = "^4.1.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["fdk_reports_bff"]
omit = ["*gunicorn_config.py"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
