[tool.poetry]
name = "fdk-reports-bff"
version = "1.0.0"
description = ""
authors = ["NilsOveTen <nils.ove.tendenes@digdir.no>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
flask-cors = "^5.0.0"
flask-restful = "^0.3.10"
python-dotenv = "^1.0.0"
requests = "^2.32.3"
gunicorn = "^23.0.0"
asyncstdlib = "^3.12.5"
httpx = "^0.27.2"
elasticsearch = "^7.17.9"
apscheduler = "^3.10.4"
python-dateutil = "^2.8.2"
python-json-logger = "^2.0.7"

[tool.poetry.dev-dependencies]
pytest = "8.3.2"
pytest-mock = "3.14.0"
mock = "5.1.0"
isort = "5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
pep8-naming = "^0.14.1"
flake8-import-order = "^0.18.2"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.8.19"
flake8-annotations = "^3.1.1"
mypy = "^1.12.1"
pytest-docker = "^3.1.1"
pytest-cov = "^5.0.0"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["fdk_reports_bff"]
omit = ["*gunicorn_config.py"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
